cf_analysis_results/checkerframework_3.42.0_results/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8.txt
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:28: error: (required.method.not.called) $$ 4 $$ method close $$ new ServerSocket(port) $$ java.net.ServerSocket $$ possible exceptional exit due to server.accept() with exception type java.io.IOException $$ ( 653, 677 ) $$ @MustCall method close may not have been invoked on new ServerSocket(port) or any of its aliases.
			server = new ServerSocket( port );
			         ^
  The type of object is: java.net.ServerSocket.
  Reason for going out of scope: possible exceptional exit due to server.accept() with exception type java.io.IOException
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:29: error: (required.method.not.called) $$ 4 $$ method close $$ server.accept() $$ java.net.Socket $$ possible exceptional exit due to socket.getOutputStream() with exception type java.io.IOException $$ ( 691, 706 ) $$ @MustCall method close may not have been invoked on server.accept() or any of its aliases.
			socket = server.accept();
			                      ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: possible exceptional exit due to socket.getOutputStream() with exception type java.io.IOException
../dataset/june2020_dataset/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/HTTPStatusTicker.java:32: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.OutputStream $$ possible exceptional exit due to os.write(response.getBytes()) with exception type java.io.IOException $$ ( 838, 876 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
			OutputStream os = t.getResponseBody();
			             ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: possible exceptional exit due to os.write(response.getBytes()) with exception type java.io.IOException
3 errors
